--- a/src/app/components/kanban/kanban.component.css
+++ b/src/app/components/kanban/kanban.component.css
@@ -1,3 +1,20 @@
 .kanban-custom{
     margin-top: 80px;
 }
+.kanban-custom{
+    margin-top: 80px;
+}
+.card-template{
+    background-color: white;
+    border-radius: 5px;
+}
+
+.e-card-header > *{
+    padding: 0 !important;
+    margin: 0 !important;
+}
+
+.e-card-content > *{
+    padding: 0 !important;
+    margin: 0 !important;
+}
