--- a/src/app/components/kanban-card-form/kanban-card-form.component.css
+++ b/src/app/components/kanban-card-form/kanban-card-form.component.css
@@ -7,7 +7,7 @@ form {
     max-width: 400px;
     background-color: #f9f9f9;
     border-radius: 10px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    /*box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);*/
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   }
   
