--- a/src/app/components/kanban/kanban.component.css
+++ b/src/app/components/kanban/kanban.component.css
@@ -2,14 +2,37 @@
 .card-template{
     background-color: white;
     border-radius: 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 5px;
+    height: auto;
+    padding: 0 5px;
+    min-height: 50px;
+    border-left: 3px solid skyblue; 
 }
-
-.e-card-header > *{
+.card-template > *{
     padding: 0 !important;
     margin: 0 !important;
+    font-size: 12px;
 }
 
-.e-card-content > *{
-    padding: 0 !important;
-    margin: 0 !important;
+
+.avatar-contacted {
+    background-color: green; 
+  }
+  
+  .avatar-not-contacted {
+    background-color: red; 
+  }
+.avatar {
+    width: 28px;
+    height: 28px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 12px;
+    color: white;
+    margin-top: 10px;
 }
